# minsc

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  analyze.sh  codechecker-skip.txt  codechecker.json  vcpkg.json
.github/workflows/: cmake.yml
afl_testcases/: code.txt
cmake/: VaryCase.cmake
include/minsc/code_analysis/: binary_expression_syntax.h  diagnostic.h  evaluator.h  expression_syntax_type.inc  syntax_facts.h  syntax_token.h
include/minsc/code_analysis/binding/: binder.h  bound_binary_expression.h  bound_binary_operator.h  bound_expression.h  bound_literal_expression.h  bound_node.h  bound_node_kind.inc  bound_unary_expression.h  bound_unary_operator.h
include/minsc/code_analysis/syntax/: binary_expression_syntax.h  expression_syntax.h  expression_syntax_type.inc  lexer.h  literal_expression_syntax.h  parenthesized_expression_syntax.h  syntax_facts.h  syntax_kind.inc  syntax_token.h  syntax_tree.h  unary_expression_syntax.h
include/minsc/runtime/: object.h  object_type.inc
include/minsc/support/: minsc_assert.h
modules/minsc-compiler/: CMakeLists.txt
modules/minsc-compiler/src/: main.c  string_builder.c  string_builder.h
modules/minsc-language/: CMakeLists.txt
modules/minsc-language/include/minsc/code_analysis/: compilation.h  diagnostic.h  diagnostic_bag.h  evaluation_result.h  evaluator.h  text_span.h  variable_symbol.h
modules/minsc-language/include/minsc/code_analysis/binding/: binder.h  bound_assignment_expression.h  bound_binary_expression.h  bound_binary_operator.h  bound_expression.h  bound_expression_type.inc  bound_global_scope.h  bound_literal_expression.h  bound_node.h  bound_node_kind.inc  bound_node_type.inc  bound_scope.h  bound_unary_expression.h  bound_unary_operator.h  bound_variable_expression.h
modules/minsc-language/include/minsc/code_analysis/syntax/: assignment_expression_syntax.h  binary_expression_syntax.h  compilation_unit_syntax.h  diagnostic.h  expression_syntax.h  expression_syntax_type.inc  lexer.h  literal_expression_syntax.h  name_expression_syntax.h  parenthesized_expression_syntax.h  parser.h  syntax_facts.h  syntax_kind.h  syntax_kind.inc  syntax_node.h  syntax_node_type.inc  syntax_token.h  syntax_tree.h  unary_expression_syntax.h
modules/minsc-language/include/minsc/code_analysis/text/: source_text.h  text_line.h  text_span.h
modules/minsc-language/include/minsc/runtime/: object.h  variable_map.h
modules/minsc-language/include/minsc/support/: is_derived.h  wrap_ctype.h
modules/minsc-language/src/code_analysis/: compilation.c  diagnostic.c  diagnostic_bag.c  evaluation_result.c  evaluator.c  variable_symbol.c
modules/minsc-language/src/code_analysis/binding/: binder.c  bound_assignment_expression.c  bound_binary_expression.c  bound_binary_operator.c  bound_expression.c  bound_global_scope.c  bound_literal_expression.c  bound_node.c  bound_scope.c  bound_unary_expression.c  bound_unary_operator.c  bound_variable_expression.c
modules/minsc-language/src/code_analysis/syntax/: assignment_expression_syntax.c  binary_expression_syntax.c  compilation_unit_syntax.c  expression_syntax.c  lexer.c  literal_expression_syntax.c  name_expression_syntax.c  parser.c  syntax_facts.c  syntax_kind.c  syntax_node.c  syntax_token.c  syntax_tree.c  unary_expression_syntax.c
modules/minsc-language/src/code_analysis/text/: source_text.c  text_line.c
modules/minsc-language/src/runtime/: object.c  variable_map.c
modules/minsc-test/: CMakeLists.txt
modules/minsc-test/include/minsc_test/: lexer.h
modules/minsc-test/include/minsc_test/code_analysis/: evaluator.h
modules/minsc-test/include/minsc_test/code_analysis/syntax/: lexer.h  parser.h  syntax_facts.h
modules/minsc-test/include/minsc_test/code_analysis/text/: source_text.h
modules/minsc-test/include/minsc_test/util/: asserting_iterator.h  str_esc.h
modules/minsc-test/include/test/: test.h
modules/minsc-test/src/: main.c
modules/minsc-test/src/code_analysis/: evaluator.c
modules/minsc-test/src/code_analysis/syntax/: lexer.c  parser.c  syntax_facts.c
modules/minsc-test/src/code_analysis/text/: source_text.c
modules/minsc-test/src/util/: asserting_iterator.c  str_esc.c
src/: binary_expression_syntax.c  binary_expression_syntax.h  diagnostic.c  evaluator.c  evaluator.h  expression_syntax.c  expression_syntax.h  expression_syntax_type.inc  is_derived.h  lexer.c  lexer.h  literal_expression_syntax.c  literal_expression_syntax.h  main.c  minsc_assert.h  object.c  object.h  object_type.inc  parenthesized_expression_syntax.c  parenthesized_expression_syntax.h  parser.c  parser.h  syntax_facts.c  syntax_kind.c  syntax_kind.h  syntax_kind.inc  syntax_node.c  syntax_node.h  syntax_node_type.inc  syntax_token.c  syntax_token.h  syntax_tree.c  syntax_tree.h  unary_expression_syntax.c  wrap_ctype.h
src/code_analysis/: evaluator.c
src/code_analysis/binding/: binder.c  bound_binary_expression.c  bound_binary_operator.c  bound_expression.c  bound_literal_expression.c  bound_unary_expression.c  bound_unary_operator.c
src/code_analysis/syntax/: binary_expression_syntax.c  diagnostic.c  evaluator.c  expression_syntax.c  lexer.c  literal_expression_syntax.c  parenthesized_expression_syntax.c  parser.c  syntax_facts.c  syntax_kind.c  syntax_token.c  syntax_tree.c  unary_expression_syntax.c
src/runtime/: object.c
